<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/Filtrer_par_date"
        android:title="@string/Filtrer_par_date"
        app:showAsAction="never"
        />

    <item android:id="@+id/Filtrer_par_salle"
        android:title="@string/Filtrer_par_salle"
        app:showAsAction="never"
        />

    <item android:id="@+id/Réinitiliser"
        android:title="@string/Réinitialiser"
        app:showAsAction="never"
        />

</menu>