...
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:id="@+id/recyclerView"
        tools:listitem="@layout/item_meeting1"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/create_meeting_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:src="@drawable/ic_baseline_add_24"
        app:backgroundTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
...
